# webscraped

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml  requirements.txt
