[project]
name = "webscrape"
version = "0.1.0"
description = "Scrape Daraz.lk site to get clothing product information"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "playwright>=1.58.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pandas>=3.0.2",
]
